# Music_Badger-YouTube_Feed

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  make_celery.py  pip_cmd.txt  pyproject.toml  requirements.txt
.github/workflows/: Publish-Docker-image.yml  actions_test.yml
data/: config.py
dev_support_scripts/: all_run.sh  all_start.sh  all_stop.sh  celery_shutdown.sh  celery_start.sh  cmd_celery.txt  cmd_pip.txt  redis_start.sh  redis_stop.sh
migrations/: help_cmd.txt
migrations/versions/: 06311631a116_add_is_short_column.py  540b04e0762c_initial_create.py  7317681455ef_upload_add_is_short_column.py  9f4cc9fa6c35_upload_add_is_livestream_column.py  dddd8d4df501_create_yt_credentials_table.py
music_feed/: __init__.py  celery.py  extension.py  help_functions.py
music_feed/_data/: config.py
music_feed/celery_test/: __init__.py  upload_celery_tasks.py
music_feed/channel/: __init__.py  _channel_helper.py  routes.py
music_feed/channel/templates_channel/: channel.html  channel_base.html  channel_create.html  channel_edit.html  channel_import.html  channel_index.html
music_feed/config/: __init__.py  config.py
music_feed/db_models/: __init__.py  _channel.py  _channel_tag.py  _tag.py  _upload.py  _yt_credentials.py
music_feed/feed/: __init__.py  _feed_helper.py  routes.py
music_feed/tag/: __init__.py  routes.py
music_feed/templates/: base_app.html  sub_feed.html
music_feed/youtube/: YouTube_auth.py  __init__.py  _uploads.py  youtube_data.py  yt_credential_handler.py
music_feed/youtube_data/: __init__.py  get_uploads.py
(+35 files in other folders)
