[project]
name = "music_feed"
version = "1.3.2"
description = "Example Flask application with Celery background tasks."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["flask>=2.2.2"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "music_feed"