[project]
name = "music_feed"
version = "1.5.1"
description = "Application to tag youtube channels and filter uplods on tags."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["flask>=2.3.3"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "music_feed"